--- a/SoftWare/STM32MCU/Dev/SoftWare.ioc
+++ b/SoftWare/STM32MCU/Dev/SoftWare.ioc
@@ -4,7 +4,29 @@ CAD.pinconfig=Project naming
 CAD.provider=
 Dma.Request0=USART3_RX
 Dma.Request1=USART3_TX
-Dma.RequestsNb=2
+Dma.Request2=USART1_RX
+Dma.Request3=USART1_TX
+Dma.RequestsNb=4
+Dma.USART1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_RX.2.Instance=DMA2_Stream2
+Dma.USART1_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.2.Mode=DMA_CIRCULAR
+Dma.USART1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_TX.3.Instance=DMA2_Stream7
+Dma.USART1_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.3.Mode=DMA_NORMAL
+Dma.USART1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART3_RX.0.Instance=DMA1_Stream1
@@ -40,16 +62,19 @@ Mcu.IP3=RCC
 Mcu.IP4=SPI2
 Mcu.IP5=SYS
 Mcu.IP6=TIM7
-Mcu.IP7=USART3
-Mcu.IPNb=8
+Mcu.IP7=USART1
+Mcu.IP8=USART3
+Mcu.IPNb=9
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PH0-OSC_IN
 Mcu.Pin10=PA14
-Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin12=VP_SYS_VS_tim6
-Mcu.Pin13=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin11=PB6
+Mcu.Pin12=PB7
+Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin14=VP_SYS_VS_tim6
+Mcu.Pin15=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin2=PH1-OSC_OUT
 Mcu.Pin3=PC2
 Mcu.Pin4=PC3
@@ -58,7 +83,7 @@ Mcu.Pin6=PB10
 Mcu.Pin7=PD8
 Mcu.Pin8=PD9
 Mcu.Pin9=PA13
-Mcu.PinsNb=14
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -67,6 +92,8 @@ MxDb.Version=DB.6.0.80
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -82,6 +109,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA13.Mode=Serial_Wire
@@ -91,6 +119,12 @@ PA14.Signal=SYS_JTCK-SWCLK
 PB10.Locked=true
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
+PB6.Locked=true
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
+PB7.Locked=true
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
 PC2.Mode=Full_Duplex_Master
 PC2.Signal=SPI2_MISO
 PC3.Mode=Full_Duplex_Master
@@ -142,7 +176,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -185,6 +219,8 @@ SPI2.VirtualType=VM_MASTER
 TIM7.IPParameters=Prescaler,Period
 TIM7.Period=65535
 TIM7.Prescaler=83
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
