--- a/SoftWare/STM32MCU/Dev/SoftWare.ioc
+++ b/SoftWare/STM32MCU/Dev/SoftWare.ioc
@@ -49,7 +49,7 @@ Dma.USART3_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.USART3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,-3,128,StartTask02,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;appTask1Ms,-3,1024,StartappTask1Ms,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -59,31 +59,47 @@ Mcu.IP0=DMA
 Mcu.IP1=FREERTOS
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
-Mcu.IP4=SPI2
-Mcu.IP5=SYS
-Mcu.IP6=TIM7
-Mcu.IP7=USART1
-Mcu.IP8=USART3
-Mcu.IPNb=9
+Mcu.IP4=SYS
+Mcu.IP5=TIM7
+Mcu.IP6=USART1
+Mcu.IP7=USART3
+Mcu.IPNb=8
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PE3
-Mcu.Pin1=PH0-OSC_IN
-Mcu.Pin10=PA14
-Mcu.Pin11=PB6
-Mcu.Pin12=PB7
-Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin14=VP_SYS_VS_tim6
-Mcu.Pin15=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin2=PH1-OSC_OUT
-Mcu.Pin3=PC2
-Mcu.Pin4=PC3
-Mcu.Pin5=PE15
-Mcu.Pin6=PB10
-Mcu.Pin7=PD8
-Mcu.Pin8=PD9
-Mcu.Pin9=PA13
-Mcu.PinsNb=16
+Mcu.Pin0=PE2
+Mcu.Pin1=PE3
+Mcu.Pin10=PE10
+Mcu.Pin11=PE11
+Mcu.Pin12=PE12
+Mcu.Pin13=PE13
+Mcu.Pin14=PE14
+Mcu.Pin15=PE15
+Mcu.Pin16=PD8
+Mcu.Pin17=PD9
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14
+Mcu.Pin2=PE4
+Mcu.Pin20=PD0
+Mcu.Pin21=PD1
+Mcu.Pin22=PD2
+Mcu.Pin23=PD3
+Mcu.Pin24=PD4
+Mcu.Pin25=PD7
+Mcu.Pin26=PB6
+Mcu.Pin27=PB7
+Mcu.Pin28=PE0
+Mcu.Pin29=PE1
+Mcu.Pin3=PE5
+Mcu.Pin30=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin31=VP_SYS_VS_tim6
+Mcu.Pin32=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin4=PE6
+Mcu.Pin5=PC13-ANTI_TAMP
+Mcu.Pin6=PH0-OSC_IN
+Mcu.Pin7=PH1-OSC_OUT
+Mcu.Pin8=PC0
+Mcu.Pin9=PC2
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -116,33 +132,164 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PB10.Locked=true
-PB10.Mode=Full_Duplex_Master
-PB10.Signal=SPI2_SCK
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=USART1_TX_SCREEN1_RX
 PB6.Locked=true
 PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=USART1_RX_SCREEN1_TX 
 PB7.Locked=true
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
-PC2.Mode=Full_Duplex_Master
-PC2.Signal=SPI2_MISO
-PC3.Mode=Full_Duplex_Master
-PC3.Signal=SPI2_MOSI
+PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC0.GPIO_Label=M_HX711_CLK_7
+PC0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC0.GPIO_PuPd=GPIO_PULLUP
+PC0.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PC0.Locked=true
+PC0.PinState=GPIO_PIN_RESET
+PC0.Signal=GPIO_Output
+PC13-ANTI_TAMP.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC13-ANTI_TAMP.GPIO_Label=M_HX711_CLK_6
+PC13-ANTI_TAMP.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC13-ANTI_TAMP.GPIO_PuPd=GPIO_PULLUP
+PC13-ANTI_TAMP.Locked=true
+PC13-ANTI_TAMP.PinState=GPIO_PIN_RESET
+PC13-ANTI_TAMP.Signal=GPIO_Output
+PC2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC2.GPIO_Label=M_HX711_CLK_8
+PC2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC2.GPIO_PuPd=GPIO_PULLUP
+PC2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PC2.Locked=true
+PC2.Signal=GPIO_Output
+PD0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD0.GPIO_Label=M_HX711_DATA_1
+PD0.GPIO_PuPd=GPIO_PULLUP
+PD0.Locked=true
+PD0.Signal=GPIO_Input
+PD1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD1.GPIO_Label=M_HX711_DATA_2
+PD1.GPIO_PuPd=GPIO_PULLUP
+PD1.Locked=true
+PD1.Signal=GPIO_Input
+PD2.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD2.GPIO_Label=M_HX711_DATA_3
+PD2.GPIO_PuPd=GPIO_PULLUP
+PD2.Locked=true
+PD2.Signal=GPIO_Input
+PD3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD3.GPIO_Label=M_HX711_DATA_4
+PD3.GPIO_PuPd=GPIO_PULLUP
+PD3.Locked=true
+PD3.Signal=GPIO_Input
+PD4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD4.GPIO_Label=M_HX711_DATA_5
+PD4.GPIO_PuPd=GPIO_PULLUP
+PD4.Locked=true
+PD4.Signal=GPIO_Input
+PD7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD7.GPIO_Label=M_HX711_DATA_6
+PD7.GPIO_PuPd=GPIO_PULLUP
+PD7.Locked=true
+PD7.Signal=GPIO_Input
+PD8.GPIOParameters=GPIO_Label
+PD8.GPIO_Label=UART4_TX_SMQ1_RX
 PD8.Mode=Asynchronous
 PD8.Signal=USART3_TX
+PD9.GPIOParameters=GPIO_Label
+PD9.GPIO_Label=UART4_RX_SMQ1_TX
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
-PE15.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
-PE15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PE15.GPIO_PuPd=GPIO_NOPULL
+PE0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE0.GPIO_Label=M_HX711_DATA_7
+PE0.GPIO_PuPd=GPIO_PULLUP
+PE0.Locked=true
+PE0.Signal=GPIO_Input
+PE1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE1.GPIO_Label=M_HX711_DATA_8
+PE1.GPIO_PuPd=GPIO_PULLUP
+PE1.Locked=true
+PE1.Signal=GPIO_Input
+PE10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE10.GPIO_Label=M_LED_QH3
+PE10.GPIO_PuPd=GPIO_PULLUP
+PE10.Locked=true
+PE10.Signal=GPIO_Input
+PE11.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PE11.GPIO_Label=M_LED_ALL_RCLK
+PE11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PE11.GPIO_PuPd=GPIO_PULLUP
+PE11.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE11.Locked=true
+PE11.PinState=GPIO_PIN_RESET
+PE11.Signal=GPIO_Output
+PE12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PE12.GPIO_Label=M_LED_SER0
+PE12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PE12.GPIO_PuPd=GPIO_PULLUP
+PE12.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE12.Locked=true
+PE12.Signal=GPIO_Output
+PE13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PE13.GPIO_Label=M_LED_ALL_OE
+PE13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PE13.GPIO_PuPd=GPIO_PULLUP
+PE13.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE13.Locked=true
+PE13.Signal=GPIO_Output
+PE14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PE14.GPIO_Label=M_LED_ALL_SRCLR
+PE14.GPIO_PuPd=GPIO_PULLUP
+PE14.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE14.Locked=true
+PE14.Signal=GPIO_Output
+PE15.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PE15.GPIO_Label=M_LED_ALL_SRCLK
+PE15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PE15.GPIO_PuPd=GPIO_PULLUP
 PE15.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PE15.Locked=true
 PE15.PinState=GPIO_PIN_RESET
 PE15.Signal=GPIO_Output
+PE2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PE2.GPIO_Label=M_HX711_CLK_1
+PE2.GPIO_PuPd=GPIO_PULLUP
+PE2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE2.Locked=true
+PE2.Signal=GPIO_Output
+PE3.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PE3.GPIO_Label=M_HX711_CLK_2
+PE3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PE3.GPIO_PuPd=GPIO_PULLUP
+PE3.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PE3.Locked=true
+PE3.PinState=GPIO_PIN_RESET
 PE3.Signal=GPIO_Output
+PE4.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PE4.GPIO_Label=M_HX711_CLK_3
+PE4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PE4.GPIO_PuPd=GPIO_PULLUP
+PE4.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE4.Locked=true
+PE4.PinState=GPIO_PIN_RESET
+PE4.Signal=GPIO_Output
+PE5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PE5.GPIO_Label=M_HX711_CLK_4
+PE5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PE5.GPIO_PuPd=GPIO_PULLUP
+PE5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE5.Locked=true
+PE5.Signal=GPIO_Output
+PE6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PE6.GPIO_Label=M_HX711_CLK_5
+PE6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PE6.GPIO_PuPd=GPIO_PULLUP
+PE6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE6.Locked=true
+PE6.Signal=GPIO_Output
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -176,7 +323,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -210,12 +357,6 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
-SPI2.CalculateBaudRate=2.625 MBits/s
-SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
-SPI2.Mode=SPI_MODE_MASTER
-SPI2.VirtualType=VM_MASTER
 TIM7.IPParameters=Prescaler,Period
 TIM7.Period=65535
 TIM7.Prescaler=83
