--- a/SoftWare/STM32MCU/Dev/SoftWare.ioc
+++ b/SoftWare/STM32MCU/Dev/SoftWare.ioc
@@ -68,38 +68,43 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PE10
-Mcu.Pin11=PE11
-Mcu.Pin12=PE12
-Mcu.Pin13=PE13
-Mcu.Pin14=PE14
-Mcu.Pin15=PE15
-Mcu.Pin16=PD8
-Mcu.Pin17=PD9
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
+Mcu.Pin10=PC3
+Mcu.Pin11=PA3
+Mcu.Pin12=PA4
+Mcu.Pin13=PE10
+Mcu.Pin14=PE11
+Mcu.Pin15=PE12
+Mcu.Pin16=PE13
+Mcu.Pin17=PE14
+Mcu.Pin18=PE15
+Mcu.Pin19=PD8
 Mcu.Pin2=PE4
-Mcu.Pin20=PD0
-Mcu.Pin21=PD1
-Mcu.Pin22=PD2
-Mcu.Pin23=PD3
-Mcu.Pin24=PD4
-Mcu.Pin25=PD7
-Mcu.Pin26=PB6
-Mcu.Pin27=PB7
-Mcu.Pin28=PE0
-Mcu.Pin29=PE1
+Mcu.Pin20=PD9
+Mcu.Pin21=PD15
+Mcu.Pin22=PA10
+Mcu.Pin23=PA13
+Mcu.Pin24=PA14
+Mcu.Pin25=PD0
+Mcu.Pin26=PD1
+Mcu.Pin27=PD2
+Mcu.Pin28=PD3
+Mcu.Pin29=PD4
 Mcu.Pin3=PE5
-Mcu.Pin30=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin31=VP_SYS_VS_tim6
-Mcu.Pin32=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin30=PD7
+Mcu.Pin31=PB6
+Mcu.Pin32=PB7
+Mcu.Pin33=PE0
+Mcu.Pin34=PE1
+Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin36=VP_SYS_VS_tim6
+Mcu.Pin37=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin4=PE6
 Mcu.Pin5=PC13-ANTI_TAMP
 Mcu.Pin6=PH0-OSC_IN
 Mcu.Pin7=PH1-OSC_OUT
 Mcu.Pin8=PC0
 Mcu.Pin9=PC2
-Mcu.PinsNb=33
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -128,10 +133,24 @@ NVIC.TimeBaseIP=TIM6
 NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA10.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
+PA10.GPIO_Label=STM32_RS485_EN
+PA10.GPIO_PuPd=GPIO_PULLUP
+PA10.Locked=true
+PA10.PinState=GPIO_PIN_SET
+PA10.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=STM32_KEY_1
+PA3.Locked=true
+PA3.Signal=GPIO_Input
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=STM32_KEY_2
+PA4.Locked=true
+PA4.Signal=GPIO_Input
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=USART1_TX_SCREEN1_RX
 PB6.Locked=true
@@ -164,6 +183,12 @@ PC2.GPIO_PuPd=GPIO_PULLUP
 PC2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC2.Locked=true
 PC2.Signal=GPIO_Output
+PC3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC3.GPIO_Label=EPS_RST
+PC3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC3.GPIO_PuPd=GPIO_PULLUP
+PC3.Locked=true
+PC3.Signal=GPIO_Output
 PD0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD0.GPIO_Label=M_HX711_DATA_1
 PD0.GPIO_PuPd=GPIO_PULLUP
@@ -174,6 +199,12 @@ PD1.GPIO_Label=M_HX711_DATA_2
 PD1.GPIO_PuPd=GPIO_PULLUP
 PD1.Locked=true
 PD1.Signal=GPIO_Input
+PD15.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PD15.GPIO_Label=LED_RUN0
+PD15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PD15.GPIO_PuPd=GPIO_PULLUP
+PD15.Locked=true
+PD15.Signal=GPIO_Output
 PD2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD2.GPIO_Label=M_HX711_DATA_3
 PD2.GPIO_PuPd=GPIO_PULLUP
