20230729 add i2c read/write and save para success

--- a/SoftWare/STM32MCU/Dev/SoftWare.ioc
+++ b/SoftWare/STM32MCU/Dev/SoftWare.ioc
@@ -52,18 +52,21 @@ FREERTOS.IPParameters=Tasks01,FootprintOK
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;appTask1Ms,-3,1024,StartappTask1Ms,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.I2C_Mode=I2C_Fast
+I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F407VET6
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=FREERTOS
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM7
-Mcu.IP6=USART1
-Mcu.IP7=USART3
-Mcu.IPNb=8
+Mcu.IP2=I2C1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM7
+Mcu.IP7=USART1
+Mcu.IP8=USART3
+Mcu.IPNb=9
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -91,20 +94,23 @@ Mcu.Pin28=PD3
 Mcu.Pin29=PD4
 Mcu.Pin3=PE5
 Mcu.Pin30=PD7
-Mcu.Pin31=PB6
-Mcu.Pin32=PB7
-Mcu.Pin33=PE0
-Mcu.Pin34=PE1
-Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin36=VP_SYS_VS_tim6
-Mcu.Pin37=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin31=PB5
+Mcu.Pin32=PB6
+Mcu.Pin33=PB7
+Mcu.Pin34=PB8
+Mcu.Pin35=PB9
+Mcu.Pin36=PE0
+Mcu.Pin37=PE1
+Mcu.Pin38=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin39=VP_SYS_VS_tim6
 Mcu.Pin4=PE6
+Mcu.Pin40=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin5=PC13-ANTI_TAMP
 Mcu.Pin6=PH0-OSC_IN
 Mcu.Pin7=PH1-OSC_OUT
 Mcu.Pin8=PC0
 Mcu.Pin9=PC2
-Mcu.PinsNb=38
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -151,6 +157,12 @@ PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=STM32_KEY_2
 PA4.Locked=true
 PA4.Signal=GPIO_Input
+PB5.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PB5.GPIO_Label=STM32_I2C1_WP
+PB5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB5.Locked=true
+PB5.PinState=GPIO_PIN_SET
+PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=USART1_TX_SCREEN1_RX
 PB6.Locked=true
@@ -161,6 +173,10 @@ PB7.GPIO_Label=USART1_RX_SCREEN1_TX
 PB7.Locked=true
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PC0.GPIO_Label=M_HX711_CLK_7
 PC0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -354,7 +370,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
