--- a/SoftWare/STM32MCU/Dev/SoftWare.ioc
+++ b/SoftWare/STM32MCU/Dev/SoftWare.ioc
@@ -8,7 +8,9 @@ Dma.Request2=USART1_RX
 Dma.Request3=USART1_TX
 Dma.Request4=USART6_RX
 Dma.Request5=USART6_TX
-Dma.RequestsNb=6
+Dma.Request6=USART2_RX
+Dma.Request7=USART2_TX
+Dma.RequestsNb=8
 Dma.USART1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART1_RX.2.Instance=DMA2_Stream2
@@ -29,6 +31,26 @@ Dma.USART1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_TX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_TX.3.Priority=DMA_PRIORITY_LOW
 Dma.USART1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_RX.6.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART2_RX.6.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_RX.6.Instance=DMA1_Stream5
+Dma.USART2_RX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_RX.6.MemInc=DMA_MINC_ENABLE
+Dma.USART2_RX.6.Mode=DMA_CIRCULAR
+Dma.USART2_RX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_RX.6.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_RX.6.Priority=DMA_PRIORITY_LOW
+Dma.USART2_RX.6.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_TX.7.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.7.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_TX.7.Instance=DMA1_Stream6
+Dma.USART2_TX.7.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.7.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.7.Mode=DMA_NORMAL
+Dma.USART2_TX.7.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.7.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.7.Priority=DMA_PRIORITY_LOW
+Dma.USART2_TX.7.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART3_RX.0.Instance=DMA1_Stream1
@@ -81,15 +103,16 @@ Mcu.CPN=STM32F407VET6
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=FREERTOS
+Mcu.IP10=USART6
 Mcu.IP2=I2C1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
 Mcu.IP6=TIM7
 Mcu.IP7=USART1
-Mcu.IP8=USART3
-Mcu.IP9=USART6
-Mcu.IPNb=10
+Mcu.IP8=USART2
+Mcu.IP9=USART3
+Mcu.IPNb=11
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -118,24 +141,26 @@ Mcu.Pin29=PD2
 Mcu.Pin3=PE5
 Mcu.Pin30=PD3
 Mcu.Pin31=PD4
-Mcu.Pin32=PD7
-Mcu.Pin33=PB5
-Mcu.Pin34=PB6
-Mcu.Pin35=PB7
-Mcu.Pin36=PB8
-Mcu.Pin37=PB9
-Mcu.Pin38=PE0
-Mcu.Pin39=PE1
+Mcu.Pin32=PD5
+Mcu.Pin33=PD6
+Mcu.Pin34=PD7
+Mcu.Pin35=PB5
+Mcu.Pin36=PB6
+Mcu.Pin37=PB7
+Mcu.Pin38=PB8
+Mcu.Pin39=PB9
 Mcu.Pin4=PE6
-Mcu.Pin40=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin41=VP_SYS_VS_tim6
-Mcu.Pin42=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin40=PE0
+Mcu.Pin41=PE1
+Mcu.Pin42=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin43=VP_SYS_VS_tim6
+Mcu.Pin44=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin5=PC13-ANTI_TAMP
 Mcu.Pin6=PH0-OSC_IN
 Mcu.Pin7=PH1-OSC_OUT
 Mcu.Pin8=PC0
 Mcu.Pin9=PC2
-Mcu.PinsNb=43
+Mcu.PinsNb=45
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -144,6 +169,8 @@ MxDb.Version=DB.6.0.80
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
@@ -164,6 +191,7 @@ NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
 NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.USART6_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -284,6 +312,16 @@ PD4.GPIO_Label=M_HX711_DATA_5
 PD4.GPIO_PuPd=GPIO_PULLUP
 PD4.Locked=true
 PD4.Signal=GPIO_Input
+PD5.GPIOParameters=GPIO_Label
+PD5.GPIO_Label=USART2_TX_SCREEN2_RX
+PD5.Locked=true
+PD5.Mode=Asynchronous
+PD5.Signal=USART2_TX
+PD6.GPIOParameters=GPIO_Label
+PD6.GPIO_Label=USART2_RX_SCREEN2_TX 
+PD6.Locked=true
+PD6.Mode=Asynchronous
+PD6.Signal=USART2_RX
 PD7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD7.GPIO_Label=M_HX711_DATA_6
 PD7.GPIO_PuPd=GPIO_PULLUP
@@ -409,7 +447,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_USART6_UART_Init-USART6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_USART6_UART_Init-USART6-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -448,6 +486,8 @@ TIM7.Period=65535
 TIM7.Prescaler=83
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
+USART2.IPParameters=VirtualMode
+USART2.VirtualMode=VM_ASYNC
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode
